[project]
name = "llm-arena-abuse"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "tupiznak"}]
dependencies = [
    "gradio-client>=1.0.1",
    "pyppeteer>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_arena_abuse"]
